organização das pastas dos composes

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,8 +2,10 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 80  
+ENV ASPNETCORE_URLS=http://+:8001;http://+:80;
+ENV ASPNETCORE_ENVIRONMENT=Development
+
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
